# statis_log

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: plugins.md
scripts/: build_and_publish.bat  dev_server.bat  install_dev.bat  lint.bat  run_tests.bat
statis_log/: __init__.py  cli.py  core.py
statis_log/analyzers/: __init__.py  base.py  pattern_analyzer.py
statis_log/collectors/: __init__.py  base.py  erlang_log_collector.py  file_collector.py
statis_log/notifiers/: __init__.py  base.py  cli_notifier.py  email_notifier.py  im_webhook_notifier.py  webhook_notifier.py
statis_log/utils/: __init__.py  config.py  logger.py  plugin.py
statis_log/utils/erlang/: __init__.py  erpc.py  rpc_call.escript
tests/: README.md  conftest.py  test_cli.py  test_cli_notifier.py  test_config.py  test_core.py  test_integration.py  test_plugin.py
