[tool.poetry]
name = "statis-log"
version = "0.1.0"
description = "一个工程化的日志收集、分析和通知工具"
authors = ["Jokerkern <852946650@qq.com>"]
readme = "README.md"
packages = [{include = "statis_log"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pyyaml = ">=5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
statis-log = "statis_log.cli:main"
